--- a/CV HTML/index.css
+++ b/CV HTML/index.css
@@ -1,4 +1,5 @@
 * {
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     box-sizing: border-box;
     margin:0;
     padding: 0;
@@ -20,12 +21,13 @@ div.box1_1{
 div.box2{
     padding: 3px;
     flex: 1;
-    background-color: whitesmoke;
+    background-color: white;
 }
 div.box2_1{
     margin: 25px;
 }
 div.title {
+    
     padding-top: 5px;    
     font-style: bold;
     margin: 6px;
@@ -55,9 +57,11 @@ div.emphasized {
     color: gray;
 }
 p{
+    padding-left: 10px;
     padding-top: 5px;
 }
 li{
+    padding-left: 7px;
     padding-top: 5px;
 }
 img{
