--- a/PracticeClass/Proyect/templates/form.html
+++ b/PracticeClass/Proyect/templates/form.html
@@ -43,6 +43,14 @@
         </div>
         <textarea class="form-control" name="dataperfil" aria-label="With textarea"></textarea>
       </div>
+      <!-- Aptitudes con hack -->
+      <label for="basic-url">Escriba sus Aptitudes -Marque 4- </label>
+      <div class="input-group mb-3">
+        <div class="input-group-prepend">
+          <span class="input-group-text">Perfil</span>
+        </div>
+        <textarea class="form-control" name="dataAp" aria-label="With textarea"></textarea>
+      </div>
       <!-- Habilidades con CheckBox -->
       <label for="basic-url">Marque sus Hablidades -Marque 4- </label>
       <div class="input-group mb-3">
@@ -297,6 +305,7 @@
             <option value="Zimbabue" id="ZW">Zimbabue</option>
         </select>
       </div>
+       
      <!-- Ingles con RADIO -->
      <div class="input-group">
         <div class="input-group-prepend">
